@@ -15,6 +15,7 @@ Version 6.7 - not yet released
   - new content "Next distance (nominal)"
 * tasks
   - custom "start requires arm" setting (#2782)
+  - new option to disable OLC optimisation
 * waypoint editor
   - delete waypoint implemented
   - CUP file support added
